# CCTaskManagementAndScheduler

./: .gitignore  PlannerDBCRQuestion.txt  README.md  ScheduleItemModelCRQuestion.txt  ScheduleItemSelfTest.txt  ScheduleWindowCRQuestion.txt
Development/Prototypes/CPPDataBase/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  DBInterface.cpp  DBInterface.h  DateData.cpp  DateData.h  InMemUser.cpp  InMemUser.h  InMemUserTask.cpp  InMemUserTask.h  ModelBase.cpp  ModelBase.h  PTS_DataField.cpp  PTS_DataField.h  TaskModel.cpp  TaskModel.h  TaskModelToDBInterface.cpp  TaskModelToDBInterface.h  UserModel.cpp  UserModel.h  UserModelToDBInterface.cpp  UserModelToDBInterface.h  UserProfileTestData.cpp  UserProfileTestData.h  UserTaskTestData.cpp  UserTaskTestData.h  dbConnectionParameters.h  dbadmindata.h  main.cpp
Development/Prototypes/CPPDataBase/DatabaseInterface/: DBInterface.cpp  DBInterface.h  TaskModelToDBInterface.cpp  TaskModelToDBInterface.h
Development/Prototypes/CPPDataBase/Tests/: UserTaskTestData.h
Development/Prototypes/MVVMPersonalPlanner/: BoostDBInterfaceCore.cpp  BoostDBInterfaceCore.h  CMakeLists.txt  DBInterface.cpp  DBInterface.h  ModelBase.cpp  ModelBase.h  PlannerTaskScheduleDB.sql  TaskDbInterface.cpp  TaskDbInterface.h  TaskModel.cpp  TaskModel.h  TestDBInterfaceCore.cpp  TestDBInterfaceCore.h  TestTaskDBInterface.cpp  TestTaskDBInterface.h  TestUserDBInterface.cpp  TestUserDBInterface.h  UserDbInterface.cpp  UserDbInterface.h  UserModel.cpp  UserModel.h  commonUtilities.cpp  commonUtilities.h  main.cpp  unitTestValgrindSuppressExpectedErrors.supp  valgrindOut_forDiff.txt
Development/Prototypes/MVVMPersonalPlanner/DataBaseInterface/: BoostDBInterfaceCore.cpp  BoostDBInterfaceCore.h  TaskDbInterface.cpp  TaskDbInterface.h  UserDbInterface.cpp  UserDbInterface.h
Development/Prototypes/MVVMPersonalPlanner/Models/: TaskModel.cpp  TaskModel.h  UserModel.cpp  UserModel.h
Development/Prototypes/MVVMPersonalPlanner/UnitTests/: TestDBInterfaceCore.cpp  TestDBInterfaceCore.h  TestTaskDBInterface.cpp  TestTaskDBInterface.h  TestUserDBInterface.cpp  TestUserDBInterface.h  unitTestValgrindSuppressExpectedErrors.supp
Development/Prototypes/MergeModelDB/: AdditionalFunctionalTestData.sql  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  PlannerTaskScheduleDB.sql  TestDBConnection.cpp  TestDBConnection.h  main.cpp
Development/Prototypes/MergeModelDB/Models/: AttributeSelfTest.h  CoreDBInterface.cpp  CoreDBInterface.h  ExceptionSelfTest.h  FunctionalSelfTest.h  GoalQueryProcessor.cpp  GoalQueryProcessor.h  ListDBInterface.h  ListSelfTest.h  ModelDBInterface.cpp  ModelDBInterface.h  ModelSelfTest.h  NoteList.cpp  NoteList.h  NoteModel.cpp  NoteModel.h  NoteQueryProcessor.cpp  NoteQueryProcessor.h  NoteSelfTest.cpp  NoteSelfTest.h  QueryProcessor.h  ScheduleItemList.cpp  ScheduleItemList.h  ScheduleItemModel.cpp  ScheduleItemModel.h  ScheduleItemQueryProcessor.cpp  ScheduleItemQueryProcessor.h  ScheduleItemSelfTest.cpp  ScheduleItemSelfTest.h  TaskList.cpp  TaskList.h  TaskListSelfTest.cpp  TaskListSelfTest.h  TaskModel.cpp  TaskModel.h  TaskQueryProcessor.cpp  TaskQueryProcessor.h  TaskSelfTest.cpp  TaskSelfTest.h  UserGoalList.cpp  (+17 more)
Development/Prototypes/MergeModelDB/TestCommands/: justsql.sh  modelOnlyTestCoverage.sh  protoTestCoverage.sh  protofulltest.sh  runproto.sh  runprototest.sh  vgproto.sh  vgprototest.sh  wcprotoTask.sh  wcprotoUser.sh  wcprotoall.sh
Development/Prototypes/MergeModelDB/Testing/: TestDBInterfaceCore.cpp  TestDBInterfaceCore.h  TestGoalModel.cpp  TestGoalModel.h  TestNoteModel.cpp  TestNoteModel.h  TestScheduleItemModel.cpp  TestScheduleItemModel.h  TestTaskDBInterface.cpp  TestTaskDBInterface.h  TestUserDBInterface.cpp  TestUserDBInterface.h  UtilityTimer.h  testOut_forDiff.txt  valgrindOut_forDiff.txt
Development/Prototypes/MergeModelDB/UnitTests/: TestDBInterfaceCore.cpp  TestDBInterfaceCore.h  TestGoal.cpp  TestGoal.h  TestGoalModel.cpp  TestGoalModel.h  TestTaskDBInterface.cpp  TestTaskDBInterface.h  TestUserDBInterface.cpp  TestUserDBInterface.h  valgrindOut_forDiff.txt
Development/Prototypes/MergeModelDB/common/: TestStatus.h  commonTestValues.cpp  commonTestValues.h  commonUtilities.cpp  commonUtilities.h
Development/Prototypes/MyDayPlanner/: CMakeLists.txt  PlannerInitializer.cpp  PlannerInitializer.h  UserDashboard.cpp  UserDashboard.h  main.cpp
Development/Prototypes/MyDayPlanner/BusinessLogic/: TestDBConnection.cpp  TestDBConnection.h
Development/Prototypes/MyDayPlanner/DBModels/: CoreDBInterface.cpp  CoreDBInterface.h  ModelDBInterface.cpp  ModelDBInterface.h  NoteModel.cpp  NoteQueryProcessor.cpp  QueryProcessor.h  TaskQueryProcessor.cpp  TaskQueryProcessor.h  UserModel.h  UserQueryProcessor.h
Development/Prototypes/MyDayPlanner/Dialogs/: BaseObjectEditorDialog.cpp  BaseObjectEditorDialog.h  DataBaseConnectionDialog.cpp  DataBaseConnectionDialog.h  GoalEditorDialog.cpp  GoalEditorDialog.h  LoginDialog.cpp  LoginDialog.h  NoteEditorDialog.cpp  NoteEditorDialog.h  ScheduleItemEditorDialog.cpp  ScheduleItemEditorDialog.h  SelectTaskParentDialog.cpp  SelectTaskParentDialog.h  TaskEditorDialog.cpp  TaskEditorDialog.h  UserEditorDialog.cpp  UserEditorDialog.h
Development/Prototypes/MyDayPlanner/SubWindows/: DashboardNoteTable.cpp  DashboardNoteTable.h  DefaultGoalDisplayTable.cpp  DefaultGoalDisplayTable.h  GoalWindow.cpp  GoalWindow.h  GuiDashboardScheduleTable.cpp  GuiDashboardScheduleTable.h  GuiDashboardTaskTable.cpp  GuiDashboardTaskTable.h  GuiTaskTableBase.cpp  GuiTaskTableBase.h  ModelSubWindow.cpp  ModelSubWindow.h  NotesWindow.cpp  NotesWindow.h  ScheduleWindow.cpp  ScheduleWindow.h  SelectParentTaskTable.cpp  SelectParentTaskTable.h  TodoWindow.cpp  TodoWindow.h
Development/Prototypes/MyDayPlanner/common/: commonTestValues.cpp  (+2 more)
Development/Prototypes/PP2WithSubDirs/: CMakeLists.txt  CommandLineParser.h  TestDBConnection.cpp  common  main.cpp
Development/Prototypes/PP3Rework/: CMakeLists.txt  PlannerInitializer.cpp  TestDBConnection.h  UserDashboard.cpp  UserDashboard.h  main.cpp
(+504 files in other folders)
